# Aspectus

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  deny.toml  docker-compose.prod.yml  docker-compose.yml  justfile  jwt_private.pem  jwt_public.pem
.github/workflows/: ci.yml
charts/aspectus/: Chart.yaml  values.yaml
console/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  vite-env.d.ts
crates/aspectus-auth/: Cargo.toml
crates/aspectus-auth/src/: cache.rs  jwt.rs  lib.rs  password.rs  test_private.pem  test_public.pem  token_verifier.rs
crates/aspectus-client/: Cargo.toml
crates/aspectus-client/src/: lib.rs
crates/aspectus-core/: Cargo.toml
crates/aspectus-server/: Cargo.toml
crates/aspectus-server/benches/: introspect.rs
crates/aspectus-server/src/: cleanup.rs  config.rs  email.rs  error.rs  lib.rs  main.rs  scope_expander.rs  tests.rs  util.rs
crates/aspectus-server/src/db/: api_key_store.rs  audit_log_store.rs  mod.rs  oauth_store.rs  service_account_store.rs  service_token_store.rs  tenant_store.rs  user_store.rs
crates/aspectus-server/src/middleware/: audit.rs  auth.rs  rate_limit.rs
crates/aspectus-server/src/routes/: api_keys.rs  audit_logs.rs  auth.rs  docs.rs  health.rs  introspect.rs  metrics.rs  mod.rs  oauth.rs  roles.rs  service_accounts.rs  service_tokens.rs  tenants.rs  token.rs  users.rs
crates/aspectus-server/tests/: bench_test.rs  e2e_test.rs  feature_test.rs  health.rs  integration_test.rs
crates/aspectus-server/tests/http_tests/: audit_logs_test.rs  auth_security_test.rs  common.rs  contract_test.rs  docs_test.rs  introspect_test.rs  main.rs  management_test.rs  oauth_test.rs  roles_test.rs  service_tokens_test.rs  tenant_isolation_test.rs  token_test.rs
crates/aspectus-server/tests/http_tests/snapshots/: http_tests__contract_test__introspect_active_api_key.snap  http_tests__contract_test__introspect_active_jwt.snap  http_tests__contract_test__introspect_active_opaque.snap  http_tests__contract_test__introspect_expired_jwt.snap  http_tests__contract_test__introspect_malformed_token.snap  http_tests__contract_test__introspect_quotas_subtree.snap  http_tests__contract_test__introspect_revoked_api_key.snap  http_tests__contract_test__introspect_unknown_token.snap
crates/aspectus-server/tests/snapshots/: contract_test__introspect_active_api_key.snap  contract_test__introspect_quotas_subtree.snap  contract_test__introspect_unknown_token.snap
docs/: PROJECT_STATUS.md  VERSIONING.md  comparison-with-logto.md  console-comparison.md  consumer-integration.md  contract-testing.md  database-alignment.md  openapi.yaml
docs/adr/: 001-token-introspection-rfc7662.md  002-api-key-per-tenant-per-project.md  003-quota-config-vs-enforcement.md  004-user-vs-service-account-role-type.md  005-role-global-definition.md  006-scope-format.md  007-hybrid-token-model.md  008-single-layer-multi-tenancy.md  009-audit-log-structured-vs-jsonb.md  010-project-static-enum.md  011-service-token-separate-auth.md  012-technology-stack.md  013-emerald-entity-id-mapping.md  014-error-handling-rfc7807.md  015-id-format-short-id.md  016-unified-login-ux.md  README.md
docs/operations/: backup-strategy.md  prometheus-alerts.yaml  runbook.md
docs/specs/: v0.2.0-mvp.md  (+5 more)
migrations/: 20260531000001_initial_schema.sql  20260531000002_indexes_and_triggers.sql  20260531000003_seed_service_tokens.sql  20260531000004_seed_scopes.sql  20260531000005_v0.4.0_token_type.sql  20260531000006_v0.5.0_user_role.sql  20260531000007_v0.6.0_oauth2.sql  20260531000008_v0.7.0_refresh_clients.sql  20260531000009_performance_indexes.sql  20260531000010_v0.5.0_role_seed.sql  20260617000011_password_reset_tokens.sql  20260619000012_tenant_logo_url.sql  20260620000013_ksuid_widen_columns.sql  20260621000014_widen_remaining_fk_columns.sql  20260621000015_remove_tavern.sql  20260623000016_oauth2_client_secret.sql  20260623000017_service_token_lifecycle.sql  20260623000018_system_tenant.sql  20260624000001_role_system_flag.sql  20260624000019_authorization_code_challenge.sql  20260624000020_password_policy_and_lockout.sql
scripts/: generate-jwt-keys.sh
(+46 files in other folders)
