[workspace]
resolver = "2"
members = [
    "crates/aspectus-core",
    "crates/aspectus-auth",
    "crates/aspectus-server",
    "crates/aspectus-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/pandaria/aspectus"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }

# HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"

# Crypto
sha2 = "0.10"
argon2 = "0.5"

# IDs
ksuid = "0.2"

# Caching
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"
mime = "0.3"

# Testing
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Logging (for sqlx)
log = "0.4"
