[package]
name = "aspectus-auth"
version.workspace = true
edition.workspace = true

[dependencies]
aspectus-core = { path = "../aspectus-core" }
sha2.workspace = true
argon2.workspace = true
redis.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
getrandom = "0.2"
hex = "0.4"
async-trait = "0.1"
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
jsonwebtoken = "9"
anyhow = "1"
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
