[package]
name = "aspectus-client"
version.workspace = true
edition.workspace = true

[dependencies]
aspectus-core = { path = "../aspectus-core" }
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror.workspace = true
jsonwebtoken = "9"
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
