[package]
name = "aspectus-server"
version.workspace = true
edition.workspace = true

[dependencies]
aspectus-core = { path = "../aspectus-core" }
aspectus-auth = { path = "../aspectus-auth" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
chrono.workspace = true
mime.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true
