[package]
name = "aspectus-server"
version.workspace = true
edition.workspace = true

[dependencies]
aspectus-core = { path = "../aspectus-core" }
aspectus-auth = { path = "../aspectus-auth" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
chrono.workspace = true
mime.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait = "0.1"
ksuid.workspace = true
getrandom = "0.2"
hex = "0.4"

sha2.workspace = true
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "pool", "tokio1-rustls-tls", "builder"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true

hex = "0.4"
insta = { version = "1", features = ["json"] }
jsonwebtoken = "9"
jsonschema = "0.18"
